--- a/istio-system/gateway/values.yaml
+++ b/istio-system/gateway/values.yaml
@@ -36,20 +36,23 @@ containerSecurityContext: ~
 
 service:
   # Type of service. Set to "None" to disable the service entirely
-  type: LoadBalancer
+  type: NodePort
   ports:
   - name: status-port
     port: 15021
     protocol: TCP
     targetPort: 15021
+    nodePort: 31021
   - name: http2
     port: 80
     protocol: TCP
     targetPort: 80
+    nodePort: 31080
   - name: https
     port: 443
     protocol: TCP
     targetPort: 443
+    nodePort: 31443
   annotations: {}
   loadBalancerIP: ""
   loadBalancerSourceRanges: []
