--- a/istio-system/gateway/Chart.yaml
+++ b/istio-system/gateway/Chart.yaml
@@ -5,7 +5,7 @@ icon: https://istio.io/latest/favicons/android-192x192.png
 keywords:
 - istio
 - gateways
-name: istio-gateway
+name: gateway
 sources:
 - https://github.com/istio/istio
 type: application
