separate istio ingress and istio in diferents namespaces

--- a/istio-system/base/overlay-values.yaml
+++ b/istio-system/base/overlay-values.yaml
@@ -1,4 +1,5 @@
 global:
+
   # ImagePullSecrets for control plane ServiceAccount, list of secrets in the same namespace
   # to use for pulling any images in pods that reference this ServiceAccount.
   # Must be set for any cluster configured with private docker registry.
@@ -8,11 +9,16 @@ global:
   istioNamespace: istio-system
 
   istiod:
-    enableAnalysis: true
+    enableAnalysis: false
 
   configValidation: true
   externalIstiod: false
   remotePilotAddress: ""
+
+  # Platform where Istio is deployed. Possible values are: "openshift", "gcp".
+  # An empty value means it is a vanilla Kubernetes distribution, therefore no special
+  # treatment will be considered.
+  platform: ""
 
 base:
   # Used for helm2 to add the CRDs to templates.
