--- a/istio-ingress/gateway/overlay-values.yaml
+++ b/istio-ingress/gateway/overlay-values.yaml
@@ -1,5 +1,5 @@
 # Name allows overriding the release name. Generally this should not be set
-name: ""
+name: "istio-ingress"
 # revision declares which revision this gateway is a part of
 revision: ""
 
@@ -35,21 +35,24 @@ securityContext: ~
 containerSecurityContext: ~
 
 service:
-  # Type of service. Set to "None" to disable the service entirely
-  type: LoadBalancer
+  type: NodePort
   ports:
   - name: status-port
     port: 15021
     protocol: TCP
     targetPort: 15021
+    nodePort: 31021
   - name: http2
     port: 80
     protocol: TCP
     targetPort: 80
+    nodePort: 31080
   - name: https
     port: 443
     protocol: TCP
     targetPort: 443
+    nodePort: 31443
+    
   annotations: {}
   loadBalancerIP: ""
   loadBalancerSourceRanges: []
