--- a/istio-ingress/gateway/values.yaml
+++ b/istio-ingress/gateway/values.yaml
@@ -3,7 +3,9 @@ name: ""
 # revision declares which revision this gateway is a part of
 revision: ""
 
-replicaCount: 1
+# Controls the spec.replicas setting for the Gateway deployment if set.
+# Otherwise defaults to Kubernetes Deployment default (1).
+replicaCount:
 
 kind: Deployment
 
@@ -35,24 +37,21 @@ securityContext: ~
 containerSecurityContext: ~
 
 service:
-  type: NodePort
+  # Type of service. Set to "None" to disable the service entirely
+  type: LoadBalancer
   ports:
   - name: status-port
     port: 15021
     protocol: TCP
     targetPort: 15021
-    nodePort: 31021
   - name: http2
     port: 80
     protocol: TCP
     targetPort: 80
-    nodePort: 31080
   - name: https
     port: 443
     protocol: TCP
     targetPort: 443
-    nodePort: 31443
-    
   annotations: {}
   loadBalancerIP: ""
   loadBalancerSourceRanges: []
@@ -128,3 +127,5 @@ imagePullSecrets: []
 # podDisruptionBudget: {}
 #
 podDisruptionBudget: {}
+
+terminationGracePeriodSeconds: 30
