--- a/istio-system/config/PeerAuthentication.yaml
+++ b/istio-system/config/PeerAuthentication.yaml
@@ -1,8 +1,8 @@
-apiVersion: security.istio.io/v1beta1
-kind: PeerAuthentication
-metadata:
-  name: "mtls"
-  namespace: "istio-system"
-spec:
-  mtls:
-    mode: STRICT
+# apiVersion: security.istio.io/v1beta1
+# kind: PeerAuthentication
+# metadata:
+#   name: "mtls"
+#   namespace: "istio-system"
+# spec:
+#   mtls:
+#     mode: STRICT
